--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/devtools": "^6.0.10",
     "@types/react": "~18.0.21",
     "@types/react-native": "~0.69.12",
     "expo": "^46.0.10",
     "prettier": "^2.7.1",
+    "react-native-flipper": "^0.164.0",
     "typescript": "^4.8.3"
   },
   "scripts": {
