--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "web": "expo start --web",
     "upgrade": "yarn upgrade-interactive",
     "sdks": "yarn dlx @yarnpkg/sdks vscode",
-    "format": "prettier --write ./app"
+    "format": "prettier --write ./app",
+    "type-check": "tsc --noEmit"
   },
   "version": "1.0.0",
   "private": true,
