--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "nanoid": "^4.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/devtools": "^6.0.10",
+    "@types/jest": "^29.1.2",
     "@types/react": "~18.0.21",
     "@types/react-native": "~0.69.12",
+    "@vitest/ui": "^0.23.4",
     "expo": "^46.0.10",
     "prettier": "^2.7.1",
     "react-native-flipper": "^0.164.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vitest": "^0.23.4"
   },
   "scripts": {
     "start": "expo start",
@@ -28,7 +33,9 @@
     "upgrade": "yarn upgrade-interactive",
     "sdks": "yarn dlx @yarnpkg/sdks vscode",
     "format": "prettier --write ./app",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "version": "1.0.0",
   "private": true,
