--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "i18next": "^21.10.0",
     "nanoid": "^4.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-i18next": "^11.18.6",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
