--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
@@ -39,7 +40,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
-  "version": "1.0.0",
+  "version": "0.2.0",
   "private": true,
   "name": "mathgame",
   "packageManager": "yarn@3.2.3"
