--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
   "npm.packageManager": "yarn",
   "editor.formatOnSave": true,
   "testing.automaticallyOpenPeekView": "never",
-  "vscode-edge-devtools.webhint": false
+  "vscode-edge-devtools.webhint": false,
+  "vitest.enable": true
 }
