--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "upgrade": "yarn upgrade-interactive",
     "sdks": "yarn dlx @yarnpkg/sdks vscode",
     "format": "prettier --write ./app",
-    "type-check": "tsc --noEmit",
+    "types": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
