--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "types": ["vitest/globals"],
     "forceConsistentCasingInFileNames": true
   },
   "extends": "expo/tsconfig.base"
