--- a/package.json
+++ b/package.json
@@ -23,16 +23,24 @@
     "@expo/webpack-config": "^0.17.3",
     "@react-navigation/devtools": "^6.0.11",
     "@testing-library/react": "^13.4.0",
+    "@types/eslint": "^8.40.2",
     "@types/react": "~18.0.25",
     "@types/react-native": "~0.70.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "@vitest/ui": "^0.25.3",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.19",
     "expo-community-flipper": "^47.0.0",
     "expo-dev-client": "~2.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "jsdom": "^20.0.3",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.8",
     "react-native-flipper": "^0.174.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
@@ -46,6 +54,7 @@
     "upgrade": "yarn upgrade-interactive",
     "sdks": "yarn dlx @yarnpkg/sdks vscode",
     "format": "prettier --write ./app",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx app --color",
     "types": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui"
