--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "nanoid": "^4.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
-    "react-native": "0.70.8",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.2",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
-    "@expo/webpack-config": "^0.17.3",
+    "@expo/webpack-config": "18.0.1",
     "@react-navigation/devtools": "^6.0.11",
     "@testing-library/react": "^13.4.0",
     "@types/eslint": "^8.40.2",
-    "@types/react": "~18.0.25",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.7",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
@@ -36,14 +36,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.19",
     "expo-community-flipper": "^47.0.0",
-    "expo-dev-client": "~2.0.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
+    "expo-dev-client": "~2.2.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
     "jsdom": "^20.0.3",
     "prettier": "^2.8.8",
     "react-native-flipper": "^0.174.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
+    "typescript": "4.9.4",
     "vitest": "^0.25.3"
   },
   "scripts": {
