--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "strict": true,
     "types": ["vitest/globals"],
+    "baseUrl": "./",
+    "paths": { "~/*": ["app/*"] },
     "forceConsistentCasingInFileNames": true
   },
   "extends": "expo/tsconfig.base"
