--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-dev-client": "~2.2.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "husky": "^8.0.3",
     "jsdom": "^20.0.3",
     "prettier": "^2.8.8",
     "react-native-flipper": "^0.174.0",
@@ -56,7 +57,8 @@
     "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx src --color",
     "types": "tsc --noEmit",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "prepare": "husky install"
   },
   "version": "0.2.0",
   "private": true,
