--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,5 @@
   "npm.packageManager": "yarn",
   "editor.formatOnSave": true,
   "testing.automaticallyOpenPeekView": "never",
-  "vitest.enable": true,
-  "vitest.commandLine": "yarn vitest"
+  "vitest.enable": true
 }
