--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@supabase/supabase-js": "^2.1.1",
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
+    "mathjs": "^11.8.2",
     "nanoid": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
