--- a/app.json
+++ b/app.json
@@ -10,6 +10,10 @@
     },
     "ios": {
       "bundleIdentifier": "rusber364.mathgame"
+    },
+    "scheme": "myapp",
+    "web": {
+      "bundler": "metro"
     }
   }
 }
