--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "@supabase/supabase-js": "^2.1.1",
     "i18next": "^22.0.6",
@@ -12,6 +11,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-toast-message": "^2.1.5",
@@ -36,7 +36,11 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.19",
+    "expo-asset": "~8.9.1",
+    "expo-constants": "~14.2.1",
     "expo-dev-client": "~2.2.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.0.0",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "husky": "^8.0.3",
@@ -46,6 +50,10 @@
     "ts-node": "^10.9.1",
     "typescript": "4.9.4",
     "vitest": "^0.32.4"
+  },
+  "resolutions": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
   },
   "scripts": {
     "start": "expo start",
