--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/native-stack": "^6.9.2",
-    "@supabase/supabase-js": "^2.1.1",
-    "i18next": "^23.2.9",
+    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@supabase/supabase-js": "^2.26.0",
+    "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
     "mathjs": "^11.8.2",
-    "nanoid": "^4.0.0",
+    "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-toast-message": "^2.1.5",
-    "react-native-url-polyfill": "^1.3.0",
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.7.1",
+    "react-native-screens": "~3.22.1",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.8",
+    "@babel/core": "^7.22.9",
     "@expo/webpack-config": "18.1.1",
-    "@react-navigation/devtools": "^6.0.11",
+    "@react-navigation/devtools": "^6.0.19",
     "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.44.0",
-    "@types/react": "~18.0.27",
-    "@types/react-native": "~0.70.7",
+    "@types/react": "~18.2.15",
+    "@types/react-native": "~0.72.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitest/ui": "^0.33.0",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "expo": "~48.0.19",
-    "expo-asset": "~8.9.1",
-    "expo-constants": "~14.2.1",
-    "expo-dev-client": "~2.2.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.5.3",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "~49.0.3",
+    "expo-asset": "~8.10.1",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.6",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.4",
+    "expo-status-bar": "~1.6.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
-    "react-native-flipper": "^0.174.0",
+    "react-native-flipper": "^0.206.0",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6",
     "vitest": "^0.33.0"
@@ -70,6 +70,7 @@
     "prepare": "husky install"
   },
   "version": "0.2.0",
+  "main": "expo-router/entry",
   "private": true,
   "name": "mathgame",
   "packageManager": "yarn@4.0.0-rc.46"
