--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "paths": { "~/*": ["src/*"] },
     "forceConsistentCasingInFileNames": true
   },
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+  "include": ["**/*.ts", "**/*.tsx"]
 }
