--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.26.0",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -18,6 +19,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.1",
+    "redux-saga": "^1.2.3",
     "valtio": "^1.10.7"
   },
   "devDependencies": {
