--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.0",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "@supabase/supabase-js": "^2.26.0",
+    "@supabase/supabase-js": "2.26.0",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
-    "mathjs": "^11.8.2",
+    "mathjs": "^11.9.1",
     "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.7.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-url-polyfill": "^2.0.0",
@@ -21,31 +20,31 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.1",
     "redux-saga": "^1.2.3",
-    "valtio": "^1.10.7"
+    "valtio": "^1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@expo/webpack-config": "18.1.1",
+    "@expo/webpack-config": "18.1.2",
     "@react-navigation/devtools": "^6.0.19",
     "@testing-library/react": "^14.0.0",
-    "@types/eslint": "^8.44.0",
-    "@types/react": "~18.2.15",
+    "@types/eslint": "^8.44.1",
+    "@types/react": "~18.2.16",
     "@types/react-native": "~0.72.2",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "@vitest/ui": "^0.33.0",
+    "eas-cli": "^3.17.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-valtio": "^0.6.2",
-    "expo": "~49.0.3",
+    "expo": "~49.0.5",
     "expo-asset": "~8.10.1",
     "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.6",
     "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
+    "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "husky": "^8.0.3",
@@ -57,14 +56,11 @@
     "typescript": "5.1.6",
     "vitest": "^0.33.0"
   },
-  "resolutions": {
-    "metro": "0.76.0",
-    "metro-resolver": "0.76.0"
-  },
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "build:android": "eas build --platform android",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "upgrade": "yarn upgrade-interactive",
     "sdks": "yarn dlx @yarnpkg/sdks vscode",
