--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@reduxjs/toolkit": "^1.9.5",
-    "@supabase/supabase-js": "2.26.0",
+    "@supabase/supabase-js": "2.29.0",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
     "mathjs": "^11.9.1",
@@ -51,7 +51,7 @@
     "jsdom": "^22.1.0",
     "open": "^9.1.0",
     "prettier": "^3.0.0",
-    "react-native-flipper": "^0.206.0",
+    "react-native-flipper": "^0.207.0",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6",
     "vitest": "^0.33.0"
@@ -59,8 +59,8 @@
   "scripts": {
     "start": "expo start",
     "build:android": "eas build --platform android",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "upgrade": "yarn upgrade-interactive",
     "sdks": "yarn dlx @yarnpkg/sdks vscode",
