--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,15 @@
       }
     },
     "preview": {
+      "android": {
+        "buildType": "apk"
+      },
       "distribution": "internal"
+    },
+    "release": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
     },
     "production": {}
   },
