add react-native-reanimated and drawer
-- add types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
     "paths": {
       "~/*": ["src/*"]
     },
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
   "extends": "expo/tsconfig.base",
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
+  "exclude": ["node_modules/**/*"]
 }
