--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "2.32.0",
@@ -13,6 +14,7 @@
     "react-i18next": "^13.0.3",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-svg": "^13.10.0",
@@ -26,12 +28,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@expo/webpack-config": "18.1.2",
     "@react-navigation/devtools": "^6.0.19",
     "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.44.2",
     "@types/react": "~18.2.19",
     "@types/react-native": "~0.72.2",
+    "@types/url-parse": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@vitest/ui": "^0.34.1",
