--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^13.0.3",
+    "react-i18next": "^13.1.2",
     "react-native": "0.72.3",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.1",
-    "react-native-svg": "^13.10.0",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "~0.19.7",
     "react-redux": "^8.1.2",
     "redux-saga": "^1.2.3",
-    "valtio": "^1.11.1"
+    "valtio": "^1.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
@@ -34,19 +34,19 @@
     "@react-navigation/devtools": "^6.0.19",
     "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.44.2",
-    "@types/react": "~18.2.19",
+    "@types/react": "~18.2.20",
     "@types/react-native": "~0.72.2",
     "@types/url-parse": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@vitest/ui": "^0.34.1",
-    "eslint": "^8.46.0",
+    "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-valtio": "^0.6.2",
-    "expo": "~49.0.6",
+    "expo": "~49.0.7",
     "expo-asset": "~8.10.1",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
