add simple-import-sort plugin

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-valtio": "^0.6.2",
     "expo": "~49.0.7",
     "expo-asset": "~8.10.1",
@@ -70,7 +71,7 @@
     "upgrade": "yarn upgrade-interactive",
     "sdks": "yarn dlx @yarnpkg/sdks vscode",
     "format": "prettier --write ./src",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx src --color",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx src --color --fix",
     "types": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
