--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-i18next": "^13.1.2",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.1",
-    "react-native-paper": "^5.10.1",
+    "react-native-paper": "^5.10.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -22,6 +22,7 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.7",
     "react-redux": "^8.1.2",
     "redux-saga": "^1.2.3",
