add test useProtectedRoutes

--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@expo/webpack-config": "19.0.0",
     "@react-navigation/devtools": "^6.0.19",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/react-native": "^12.2.2",
     "@types/eslint": "^8.44.2",
     "@types/react": "~18.2.21",
     "@types/react-native": "~0.72.2",
     "@types/url-parse": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@vitest/coverage-v8": "^0.34.3",
     "@vitest/ui": "^0.34.3",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -75,6 +77,7 @@
     "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx src app --color --fix",
     "types": "tsc --noEmit",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "prepare": "husky install"
   },
