--- a/package.json
+++ b/package.json
@@ -33,14 +33,20 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@expo/webpack-config": "19.0.0",
     "@react-navigation/devtools": "^6.0.19",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-native": "^12.2.2",
     "@types/eslint": "^8.44.2",
     "@types/react": "~18.2.21",
     "@types/react-native": "~0.72.2",
-    "@types/url-parse": "^1.4.8",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/url-parse": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "@vitest/coverage-v8": "^0.34.3",
     "@vitest/ui": "^0.34.3",
     "eslint": "^8.48.0",
@@ -57,10 +63,12 @@
     "expo-router": "2.0.4",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "happy-dom": "^10.11.2",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "open": "^9.1.0",
     "prettier": "^3.0.3",
+    "react-test-renderer": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "vitest": "^0.34.3"
