--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-test-renderer": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.3"
   },
   "scripts": {
