--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-native": "^12.2.2",
     "@types/eslint": "^8.44.2",
+    "@types/jest": "^29.5.4",
     "@types/react": "~18.2.21",
     "@types/react-native": "~0.72.2",
     "@types/react-test-renderer": "^18.0.0",
@@ -65,10 +66,13 @@
     "expo-status-bar": "~1.6.0",
     "happy-dom": "^10.11.2",
     "husky": "^8.0.3",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "jsdom": "^22.1.0",
     "open": "^9.1.0",
     "prettier": "^3.0.3",
     "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "vite-tsconfig-paths": "^4.2.0",
@@ -85,7 +89,7 @@
     "format": "prettier --write ./src",
     "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx src app --color --fix",
     "types": "tsc --noEmit",
-    "test": "vitest",
+    "test": "jest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "prepare": "husky install"
