--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "jsdom": "^22.1.0",
+    "lint-staged": "^14.0.1",
     "open": "^9.1.0",
     "prettier": "^3.0.3",
     "react-test-renderer": "^18.2.0",
@@ -93,6 +94,13 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{tsx,ts}": [
+      "yarn lint",
+      "yarn test",
+      "yarn types"
+    ]
   },
   "version": "0.2.0",
   "main": "expo-router/entry",
