add absolute path to app folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "types": ["vitest/globals", "jest", "@testing-library/jest-native"],
     "baseUrl": "./",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["src/*"],
+      "@/*": ["app/*"]
     },
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
