--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "jest-expo": "^49.0.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
     "open": "^9.1.0",
