--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/native": "^6.1.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "2.33.1",
+    "expo-document-picker": "~11.5.4",
     "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^7.1.0",
     "mathjs": "^11.10.1",
