--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^2.0.1",
     "@supabase/supabase-js": "2.33.1",
     "expo-document-picker": "~11.5.4",
     "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^7.1.0",
     "mathjs": "^11.10.1",
     "nanoid": "^4.0.2",
-    "npm-check-updates": "^16.14.2",
+    "npm-check-updates": "^16.14.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.2.1",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.1",
     "react-native-paper": "^5.10.3",
-    "react-native-reanimated": "~3.4.2",
-    "react-native-safe-area-context": "4.7.2",
-    "react-native-screens": "~3.25.0",
-    "react-native-svg": "13.13.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.8",
     "react-redux": "^8.1.2",
     "redux-saga": "^1.2.3",
-    "valtio": "^1.11.2"
+    "valtio": "^1.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
@@ -35,51 +35,51 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@expo/webpack-config": "19.0.0",
     "@react-navigation/devtools": "^6.0.19",
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/react-native": "^12.2.2",
-    "@types/eslint": "^8.44.2",
-    "@types/jest": "^29.5.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/react-native": "^12.4.1",
+    "@types/eslint": "^8.44.8",
+    "@types/jest": "^29.5.10",
     "@types/react": "~18.2.21",
     "@types/react-native": "~0.72.2",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react-test-renderer": "^18.0.7",
     "@types/url-parse": "^1.4.9",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "@vitejs/plugin-react": "^4.0.4",
-    "@vitest/coverage-v8": "^0.34.3",
-    "@vitest/ui": "^0.34.3",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.0.4",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-valtio": "^0.6.2",
-    "expo": "~49.0.11",
+    "expo": "~49.0.21",
     "expo-asset": "~8.10.1",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
-    "expo-router": "2.0.8",
+    "expo-router": "2.0.14",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "happy-dom": "^10.11.2",
+    "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-expo": "^49.0.0",
-    "jsdom": "^22.1.0",
-    "lint-staged": "^14.0.1",
+    "jsdom": "^23.0.1",
+    "lint-staged": "^15.2.0",
     "open": "^9.1.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "5.2.2",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.3"
+    "vite-tsconfig-paths": "^4.2.2",
+    "vitest": "^1.0.4"
   },
   "scripts": {
     "start": "expo start",
@@ -87,7 +87,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "update:i": "ncu -i",
+    "update:i": "ncu -i --format group",
     "format": "prettier --write ./src",
     "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx src app --color --fix",
     "types": "tsc --noEmit",
