--- a/package.json
+++ b/package.json
@@ -1,85 +1,91 @@
 {
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/drawer": "^6.6.3",
-    "@react-navigation/native": "^6.1.7",
+    "@babel/core": "^7.23.7",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
     "@reduxjs/toolkit": "^2.0.1",
-    "@supabase/supabase-js": "2.33.1",
-    "expo-document-picker": "~11.5.4",
-    "i18next": "^23.4.6",
-    "i18next-browser-languagedetector": "^7.1.0",
+    "@supabase/supabase-js": "2.39.1",
+    "expo": "next",
+    "expo-asset": "~9.0.1",
+    "expo-constants": "~15.4.2",
+    "expo-document-picker": "~11.10.1",
+    "expo-linking": "~6.2.1",
+    "expo-router": "^3.4.1",
+    "expo-splash-screen": "~0.26.1",
+    "expo-status-bar": "~1.11.1",
+    "i18next": "^23.7.13",
+    "i18next-browser-languagedetector": "^7.2.0",
     "mathjs": "^11.10.1",
     "nanoid": "^4.0.2",
-    "npm-check-updates": "^16.14.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^13.2.1",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.1",
-    "react-native-paper": "^5.10.3",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "react-native-toast-message": "^2.1.6",
+    "react-i18next": "^14.0.0",
+    "react-native": "0.73.1",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.11.5",
+    "react-native-reanimated": "~3.6.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.19.8",
-    "react-redux": "^8.1.2",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.0.4",
     "redux-saga": "^1.2.3",
     "valtio": "^1.12.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@expo/webpack-config": "19.0.0",
-    "@react-navigation/devtools": "^6.0.19",
+    "@babel/plugin-transform-arrow-functions": "^7.23.3",
+    "@babel/plugin-transform-shorthand-properties": "^7.23.3",
+    "@babel/plugin-transform-template-literals": "^7.23.3",
+    "@react-navigation/devtools": "^6.0.20",
     "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react": "^14.1.2",
-    "@testing-library/react-native": "^12.4.1",
-    "@types/eslint": "^8.44.8",
-    "@types/jest": "^29.5.10",
-    "@types/react": "~18.2.21",
-    "@types/react-native": "~0.72.2",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/babel__core": "^7.20.5",
+    "@types/eslint": "^8.56.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
+    "@types/react": "~18.2.46",
+    "@types/react-native": "~0.73.0",
     "@types/react-test-renderer": "^18.0.7",
-    "@types/url-parse": "^1.4.9",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
+    "@types/url-parse": "^1.4.11",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.0.4",
-    "eslint": "^8.55.0",
+    "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/ui": "^1.1.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-valtio": "^0.6.2",
-    "expo": "~49.0.21",
-    "expo-asset": "~8.10.1",
-    "expo-constants": "~14.4.2",
-    "expo-linking": "~5.0.2",
-    "expo-router": "2.0.14",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
     "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-expo": "^49.0.0",
+    "jest-expo": "~50.0.1",
     "jsdom": "^23.0.1",
     "lint-staged": "^15.2.0",
-    "open": "^9.1.0",
-    "prettier": "^3.1.0",
+    "npm-check-updates": "^16.14.12",
+    "open": "^10.0.2",
+    "prettier": "^3.1.1",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "5.2.2",
-    "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^1.0.4"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vite-tsconfig-paths": "^4.2.3",
+    "vitest": "^1.1.0"
   },
   "scripts": {
     "start": "expo start",
