delete vitest, valtio
off async routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "types": ["vitest/globals", "jest", "@testing-library/jest-native"],
+    "types": ["jest", "@testing-library/jest-native"],
     "baseUrl": "./",
     "paths": {
       "~/*": ["src/*"],
