--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.0.4",
-    "redux-saga": "^1.2.3",
-    "valtio": "^1.12.1"
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
@@ -59,16 +58,12 @@
     "@types/url-parse": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.1.0",
-    "@vitest/ui": "^1.1.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-valtio": "^0.6.2",
     "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
@@ -82,10 +77,7 @@
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vite-tsconfig-paths": "^4.2.3",
-    "vitest": "^1.1.0"
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "expo start",
