--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "printWidth": 120,
-  "endOfLine": "auto"
+ "semi": false,
+ "tabWidth": 0,
+ "singleQuote": true,
+ "printWidth": 120,
+ "endOfLine": "auto"
 }
